[package]
name = "holdthem"
version = "0.1.0"
authors = ["George Lewis"]
edition = "2018"

[[bin]]
name = "holdthem"
test = false
bench = false
path = "holdthem/main.rs"    # The source file of the target.

[lib]
name = "pyholdthem"
path = "holdthem/pyholdthem.rs"    # The source file of the target.
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.12.4"
#features = ["extension-module"]

[dependencies]
rs_poker = "1.0.0"
rand = "0.7"
counter = "0.5.2"
lazy_static = "1.4.0"
clap = "3.0.0-beta.2"
all_asserts = "2.1.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]